--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "screenrecorder",
   "productName": "screenrecorder",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "Quick Screen Recorde",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
